# cose2

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  security-audit-report.md
.github/workflows/: ci.yml  release.yml
docs/: agent-guide.md
examples/: custom_crypto_traits.rs  cwt_sign1.rs  detached_payload.rs  encrypt0_ring.rs  mac0_ring.rs  sign1_ring.rs
sd-cwt/: Cargo.toml  README.md
sd-cwt/examples/: basic.rs
sd-cwt/src/: lib.rs
src/: aes_gcm.rs  context.rs  crypto.rs  cwt.rs  ed25519.rs  encrypt.rs  encrypt0.rs  error.rs  header.rs  iana.rs  key.rs  label.rs  lib.rs  mac.rs  mac0.rs  map.rs  recipient.rs  sign.rs  sign1.rs  tag.rs  traits.rs  util.rs
tests/: context_cwt.rs  core.rs  coverage.rs  coverage2.rs  coverage3.rs  crypto_aes_gcm.rs  crypto_aws_lc_rs.rs  crypto_ed25519_dalek.rs  crypto_ring.rs  messages.rs  rfc_examples.rs
tests/common/: mod.rs
