[workspace]
resolver = "2"
members = ["."]

[package]
name = "cose2"
version = "0.2.0"
authors = ["0xZensh <txr1883@gmail.com>"]
description = "A Rust library for CBOR Object Signing and Encryption (COSE, RFC 9052) and CBOR Web Token (CWT, RFC 8392), built on cbor2."
homepage = "https://github.com/ldclabs/cose2"
repository = "https://github.com/ldclabs/cose2"
documentation = "https://docs.rs/cose2"
readme = "README.md"
keywords = ["cbor", "cose", "cwt", "rfc9052"]
categories = ["encoding", "parsing"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.85"

[dependencies]
cbor2 = { version = "1", features = ["derive"] }
ring = { version = "0.17", optional = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
hex = "0.4"

[features]
default = []
crypto = ["crypto-ring"]
crypto-ring = ["dep:ring"]

[[example]]
name = "sign1_ring"
required-features = ["crypto-ring"]

[[example]]
name = "mac0_ring"
required-features = ["crypto-ring"]

[[example]]
name = "encrypt0_ring"
required-features = ["crypto-ring"]

[package.metadata.docs.rs]
all-features = true
