[workspace]
resolver = "2"
members = [".", "sd-cwt"]

[package]
name = "cose2"
version = "0.3.2"
authors = ["0xZensh <txr1883@gmail.com>"]
description = "A Rust library for CBOR Object Signing and Encryption (COSE, RFC 9052) and CBOR Web Token (CWT, RFC 8392), built on cbor2."
homepage = "https://github.com/ldclabs/cose2"
repository = "https://github.com/ldclabs/cose2"
documentation = "https://docs.rs/cose2"
readme = "README.md"
keywords = ["cbor", "cose", "cwt", "rfc9052"]
categories = ["encoding", "parsing"]
license = "MIT"
edition = "2021"
rust-version = "1.85"
exclude = [".github/"]

[workspace.dependencies]
aes-gcm = "0.11"
cbor2 = { version = "1.1", features = ["derive"] }
ed25519-dalek = "2"
ring = { version = "0.17" }
aws-lc-rs = { version = "1.17" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.11"

[dependencies]
cbor2 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
aes-gcm = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
ring = { workspace = true, optional = true }

[dev-dependencies]
hex = "0.4"

[features]
default = []
# Aggregate alias for the default built-in backend (`ring`).
crypto = ["crypto-ring"]
# `ring`-backed built-in providers (module `crypto`).
crypto-ring = ["dep:ring"]
# `aws-lc-rs`-backed built-in providers (module `crypto`). When both backend
# features are enabled, `crypto-ring` takes precedence.
crypto-aws-lc-rs = ["dep:aws-lc-rs"]
# `ed25519-dalek`-backed Ed25519 Signer/Verifier (module `ed25519`).
crypto-ed25519-dalek = ["dep:ed25519-dalek"]
# `aes-gcm`-backed AES-GCM Encryptor (module `aes_gcm`).
crypto-aes-gcm = ["dep:aes-gcm"]

[[example]]
name = "sign1_ring"
required-features = ["crypto-ring"]

[[example]]
name = "mac0_ring"
required-features = ["crypto-ring"]

[[example]]
name = "encrypt0_ring"
required-features = ["crypto-ring"]

[package.metadata.docs.rs]
all-features = true
