[package]
name = "sd-cwt"
version = "0.2.0"
description = "Selective Disclosure CBOR Web Token (SD-CWT) helpers for cose2."
homepage = "https://github.com/ldclabs/cose2"
repository = "https://github.com/ldclabs/cose2"
documentation = "https://docs.rs/sd-cwt"
readme = "README.md"
keywords = ["cbor", "cose", "cwt", "sd-cwt", "selective-disclosure"]
categories = ["encoding", "parsing"]
license = "MIT"
edition = "2021"
rust-version = "1.89"

[dependencies]
cose2 = { path = "..", version = "0.4" }
cbor2 = { workspace = true }
sha2 = { workspace = true }
